--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import url(./vendor/normalize.css);
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
